@@ -1,6 +1,7 @@
 [B]0.9.5[/B]
 Close osd after subs download.
 On subs button, download if no subs to switch on.
+(re)add fallback to UMS scraped ratings in videoinfo dialog
 
 [B]0.9.4[/B]
 Fix parentfolder list position
